Fixed horizontal scroll on mobile devices
Apparently it was caused by the previous fix

--- a/app/styles/base/_shame.scss
+++ b/app/styles/base/_shame.scss
@@ -67,9 +67,6 @@ body {
     .settings--header {
       margin-top: 0;
     }
-    .feed-container {
-      overflow-y: hidden;
-    }
 }
 
 // Hide extra whitespace created by the overflow hack above
